--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     <a-scene embedded arjs="sourceType: webcam;">
 
         <a-assets>
-            <a-asset-item id="cake-obj" src="/assets/cake.obj"></a-asset-item>
-            <a-asset-item id="cake-mtl" src="/assets/cake.mtl"></a-asset-item>
-            <a-asset-item id="BrightFuture-obj" src="/assets/tinker.obj"></a-asset-item>
-            <a-asset-item id="BrightFuture-mtl" src="/assets/obj.mtl"></a-asset-item>
-            <!-- <a-asset-item id="totoro-obj" src="/assets/"></a-asset-item>
-            <a-asset-item id="totoro-mtl" src="/assets/Withwand.mtl"></a-asset-item> -->
-            <audio id="bday" src="/assets/bday.mp3"></audio>
-            <a-asset-item id="text-obj" src="/assets/3D_Happy_birthday.obj"></a-asset-item>
-            <a-asset-item id="text-mtl" src="/assets/3D_Happy_birthday.mtl"></a-asset-item>
+            <a-asset-item id="cake-obj" src="/Bdaycard.github.io/assets/cake.obj"></a-asset-item>
+            <a-asset-item id="cake-mtl" src="/Bdaycard.github.io/assets/cake.mtl"></a-asset-item>
+            <a-asset-item id="BrightFuture-obj" src="/Bdaycard.github.io/assets/tinker.obj"></a-asset-item>
+            <a-asset-item id="BrightFuture-mtl" src="/Bdaycard.github.io/assets/obj.mtl"></a-asset-item>
+            <!-- <a-asset-item id="totoro-obj" src="/Bdaycard.github.io/assets/"></a-asset-item>
+            <a-asset-item id="totoro-mtl" src="/Bdaycard.github.io/assets/Withwand.mtl"></a-asset-item> -->
+            <audio id="bday" src="/Bdaycard.github.io/assets/bday.mp3"></audio>
+            <a-asset-item id="text-obj" src="/Bdaycard.github.io/assets/3D_Happy_birthday.obj"></a-asset-item>
+            <a-asset-item id="text-mtl" src="/Bdaycard.github.io/assets/3D_Happy_birthday.mtl"></a-asset-item>
 
         </a-assets>
 
