--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                     text="width: 4; value: This text will be 5 units wide."></a-entity> -->
                 <a-entity obj-model="obj: #BrightFuture-obj; mtl : #BrightFuture-mtl" rotation="10 30 0"
                     position="-1.2 0.25 1" scale="0.01 0.01 0.01"></a-entity>
-                <!-- <a-entity obj-model="obj: #totoro-obj; mtl:#totoro-mtl" rotation="-95 90 -95" scale="0.1 0.1 0.1"
-                    position="1.3 -0.65 0.5"></a-entity> -->
+                  <a-entity obj-model="obj: #BrightFuture-obj; mtl:#BrightFuture-mtl" rotation="10 -30 0"
+                    scale="0.01 0.01 0.01" position="1.3 0.25 1"></a-entity>
                 <a-entity obj-model="obj: #text-obj; mtl:#text-mtl" rotation="0 0 0" scale="0.5 0.5 0.5"
                     position="-1 0.5 -1">
                 </a-entity>
