--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
 <head>
     <title>Happy Birthday</title>
     <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
-<!--     <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script> -->
-<!--     <script src="https://unpkg.com/aframe-text-geometry-component/dist/aframe-text-geometry-component.min.js"></script> -->
-    <script src="aframe.min.js"></script>
-    <script src="aframe-ar.js"></script>
+    <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script>
+    <script src="https://unpkg.com/aframe-text-geometry-component/dist/aframe-text-geometry-component.min.js"></script>
     <script
         src="https://unpkg.com/aframe-particle-system-component@1.0.x/dist/aframe-particle-system-component.min.js"></script>
 </head>
